lintian (1.23.50) unstable; urgency=low

  * checks/binaries:
    + [RA] Fix code for filtering out NSS modules from SONAME checks.
  * checks/common_data.pm:
    + [RA] armel is now a standard architecture.
  * checks/control-file{.desc,}:
    + [RA] Check for self-dependencies in the source package since the
      current dpkg-gencontrol silently fixes them but they may indicate
      other problems.  Thanks, Patrick Matthäi.  (Closes: #471740)
  * checks/copyright-file{.desc,}:
    + [RA] Check for copyright files containing the Apache 2.0 license,
      which is now in common-licenses.
  * checks/fields:
    + [RA] Syntax-check Breaks like other relationship fields.  Warn if
      any packages use Breaks for right now.  Only check for duplicate
      libraries and Tcl versions in dependency fields, not Breaks,
      Conflicts, and other similar fields.  Warn if Breaks is used without
      a version.  Check that Breaks is not inconsistent with other
      dependency fields.
  * checks/init.d:
    + [RA] Try to allow for postinst scripts written in Perl and still
      recognize the update-rc.d calls.
  * checks/manpages:
    + [RA] Only ignore errors about wrapping lines for Asian locale man
      pages, since that's where the groff trouble lies.  Ignore character
      set errors for all man pages with old versions of man and no man
      pages with current versions of man since the new character set
      handling should cope.  (Closes: #474052)
    + [FL] Ignore more unicode issues with old man.
    + [RA] Warn about inclusion of the country name in the localized man
      page directory unless it's one of the known exceptions.
  * checks/md5sums:
    + [FL] Don't complain about missing md5sums file if the
      package only contains conffiles.  (Closes: #482869)
  * checks/nmu:
    + [RA] Don't treat "Ack NMU" as an NMU declaration.  Thanks, Joe
      Nahmias.  (Closes: #484600)
  * checks/rules{.desc,}: