@@ -24,11 +24,13 @@
 
 package Lintian::fields;
 use strict;
+
 use lib "$ENV{'LINTIAN_ROOT'}/checks/";
 use common_data;
 use Dep;
 use Tags;
 use Util;
+use Lintian::Data;
 
 # The allowed Python dependencies currently.  This is the list of alternatives
 # that, either directly or through transitive dependencies that can be relied
@@ -120,6 +122,9 @@ my $pkg = shift;
 my $type = shift;
 my $version;
 my $arch_indep;
+
+# Load obsolete packages list.
+my $obsolete_packages = Lintian::Data->new ('fields/obsolete-packages');
 
 local $/ = undef; #Read everything in one go
 
@@ -494,7 +499,7 @@ if (($type eq "binary") || ($type eq 'udeb')) {
 					    if $rest;
 
 					tag "depends-on-obsolete-package", "$field: $part_d_orig"
-					    if ($known_obsolete_packages{$d_pkg} && &$is_dep_field($field));
+					    if ($obsolete_packages->known($d_pkg) && &$is_dep_field($field));
 
 					tag "depends-on-x-metapackage", "$field: $part_d_orig"
 					    if ($known_x_metapackages{$d_pkg} && ! $metapackage && &$is_dep_field($field));
@@ -683,7 +688,7 @@ if ($type eq "source") {
 					tag "build-depends-on-essential-package-without-using-version", "$field: $part_d_orig"
 					    if ($d_pkg ne "coreutils" && $known_essential{$d_pkg} && ! $d_version->[0]);
 					tag "build-depends-on-obsolete-package", "$field: $part_d_orig"
-					    if ($known_obsolete_packages{$d_pkg} && &$is_dep_field($field));
+					    if ($obsolete_packages->known($d_pkg) && &$is_dep_field($field));
 
 					tag "build-depends-on-x-metapackage", "$field: $part_d_orig"
 					    if ($known_x_metapackages{$d_pkg} && &$is_dep_field($field));
